--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="estatenerds.com/" target="_blank" class="text-decoration-none">
+                                <a href="http://estatenerds.com/" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
                                 </a>
                             </div>
