--- a/index.html
+++ b/index.html
@@ -247,11 +247,35 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
-                    <a href="https://estatenrds.netlify.app/">
+                    <a href="https://estatenerds.com/">
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="http://estatenerds.com/" target="_blank" class="text-decoration-none">
+                                <a href="https://estatenerds.com/" target="_blank" class="text-decoration-none">
+                                    <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
+                                </a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                    <a href="https://webly.netlify.app/">
+                        <div class="position-relative overflow-hidden mb-2">
+                            <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="">
+                            <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                                <a href="https://webly.netlify.app" target="_blank" class="text-decoration-none">
+                                    <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
+                                </a>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                    <a href="https://trace.netlify.app">
+                        <div class="position-relative overflow-hidden mb-2">
+                            <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="">
+                            <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
+                                <a href="https://trace.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
                                 </a>
                             </div>
