--- a/index.html
+++ b/index.html
@@ -225,17 +225,17 @@
                 <div class="col-12 text-center mb-2">
                     <ul class="list-inline mb-4" id="portfolio-flters">
                         <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".first">Design</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".second">Development</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".design">Design</li>
+                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".development">Development</li>
                         <!-- <li class="btn btn-sm btn-outline-primary m-1" data-filter=".third">Editing</li> -->
                     </ul>
                 </div>
             </div>
             <div class="row portfolio-container">
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://lorahosthosting.netlify.app/">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/lorahost.png" alt="">
+                            <img class="img-fluid rounded w-100" src="img/lorahost.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://lorahosthosting.netlify.app/" target="_blank"
                                     class="text-decoration-none">
@@ -246,10 +246,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://estatenerds.com/">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="">
+                            <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://estatenerds.com/" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
@@ -258,10 +258,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://webly.netlify.app/">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="">
+                            <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://webly.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
@@ -270,10 +270,10 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://trace.netlify.app">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="">
+                            <img class="img-fluid rounded w-100" src="img/traceprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://trace.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
@@ -282,7 +282,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item third">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item design">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/1.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item design">
                     <div class="position-relative overflow-hidden mb-2">
                         <img class="img-fluid rounded w-100" src="img/2.png" alt="">
                         <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
