--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
-                    <a href="https://webly.netlify.app/">
+                    <a href="https://webhostify.netlify.app/">
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
@@ -271,7 +271,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
-                    <a href="https://trace.netlify.app">
+                    <a href="https://traceseo.netlify.app">
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/traceprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
