--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/weblyprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="https://webly.netlify.app" target="_blank" class="text-decoration-none">
+                                <a href="https://webhostify.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
                                 </a>
                             </div>
@@ -275,7 +275,7 @@
                         <div class="position-relative overflow-hidden mb-2">
                             <img class="img-fluid rounded w-100" src="img/traceprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
-                                <a href="https://trace.netlify.app" target="_blank" class="text-decoration-none">
+                                <a href="https://traceseo.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
                                 </a>
                             </div>
