--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://qwikbuy.netlify.app">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/traceprev.png" alt="" style="height: 250px;">
+                            <img class="img-fluid rounded w-100" src="img/qwikbuyprev.png" alt="" style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://qwikbuy.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
