--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta charset="utf-8">
     <title>Samuel Emeka's Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Samuel Emeka's Portfolio" name="keywords">
-    <meta content="Samuel Emeka JW" name="keywords">
-    <meta content="Samuel Emeka Web Developer" name="keywords">
-    <meta content="Samuel Emeka SJHS" name="keywords">
-    <meta content="aficionadosam" name="keywords">
+    <meta content="Samuel Emeka's Portfolio. emeka samuel, ifeanyichuckwu emeka samuel, valley estate samuel emeka" name="keywords">
     <meta content="Samuel Emeka's Portfolio" name="description">
 
     <!-- Favicon -->
