--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <title>Samuel Emeka's Portfolio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Samuel Emeka's Portfolio. emeka samuel, ifeanyichuckwu emeka samuel, valley estate samuel emeka" name="keywords">
+    <meta content="Samuel Emeka's Portfolio. emeka samuel, ifeanyichuckwu emeka samuel, valley estate samuel emeka"
+        name="keywords">
     <meta content="Samuel Emeka's Portfolio" name="description">
 
     <!-- Favicon -->
@@ -245,7 +246,8 @@
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://estatenerds.com/">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt="" style="height: 250px;">
+                            <img class="img-fluid rounded w-100" src="img/estatenerds.png" alt=""
+                                style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://estatenerds.com/" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
@@ -281,7 +283,8 @@
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item development">
                     <a href="https://qwikbuy.netlify.app">
                         <div class="position-relative overflow-hidden mb-2">
-                            <img class="img-fluid rounded w-100" src="img/qwikbuyprev.png" alt="" style="height: 250px;">
+                            <img class="img-fluid rounded w-100" src="img/qwikbuyprev.png" alt=""
+                                style="height: 250px;">
                             <div class="portfolio-btn bg-primary d-flex align-items-center justify-content-center">
                                 <a href="https://qwikbuy.netlify.app" target="_blank" class="text-decoration-none">
                                     <span class="text-white text-center" style="font-size: 20px;">Live Preview</span>
@@ -556,7 +559,13 @@
         </div>
     </div> -->
     <!-- Blog End -->
-
+    <div class="container-fluid py-5 text-center" id="quiz">
+        <h3>Wanna take a quiz?</h3>
+        <div data-aidaform-widget="form-2019-12"
+            data-url="https://samuelemeka2006.aidaform.com/expert-account-template-tv-show-quiz" data-width="100%"
+            data-height="500px" data-do-resize></div>
+        <script>(function () { var r, d = document, gt = d.getElementById, cr = d.createElement, tg = d.getElementsByTagName, id = "aidaform-embed"; if (!gt.call(d, id)) { r = cr.call(d, "script"); r.id = id; r.src = "https://embed.aidaform.com/embed.js"; (d.head || tg.call(d, "head")[0]).appendChild(r); } })()</script>
+    </div>
 
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
