--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Samuel Emeka's Portfolio. emeka samuel, ifeanyichuckwu emeka samuel, valley estate samuel emeka" name="keywords">
     <meta content="Samuel Emeka's Portfolio" name="description">
+    <meta name= "name" content= "s5d8f76sd8f7s6d8f76s8d7f8s" >
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7721767933257398" crossorigin="anonymous"></script>
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
