--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script src="//code.tidio.co/r8qfnmzigu6k6calnfonmwqttb8vzrzz.js" async></script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -115,7 +116,7 @@
                     <img class="img-fluid rounded w-100" src="img/fbpost.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">UI/UX Designer & Web Developer</h3>
+                    <h3 class="mb-4">Web Designer & Web Developer</h3>
                     <p>Ready to take on the world and make a difference. A motivated learner and problem-solver who is
                         passionate about making an impact.</p>
                     <div class="row mb-3">
