--- a/index.html
+++ b/index.html
@@ -534,6 +534,17 @@
         </div>
     </div> -->
     <!-- Blog End -->
+    <!-- Calculator Start -->
+
+    <div class="container-fluid py-5-text-center">
+        <h3>Find out how much it costs to get your own website.</h3>
+
+        <div class="calculator">
+            <div data-aidaform-widget="form-2019-12" data-url="https://samuelemeka2006.aidaform.com/expert-template-website-design-cost-calculator" data-width="100%" data-height="500px" data-do-resize></div><script>(function(){var r,d=document,gt=d.getElementById,cr=d.createElement,tg=d.getElementsByTagName,id="aidaform-embed";if(!gt.call(d,id)){r=cr.call(d,"script");r.id=id;r.src="https://embed.aidaform.com/embed.js";(d.head || tg.call(d,"head")[0]).appendChild(r);}})()</script>
+        </div>
+    </div>
+
+    <!-- Calculator End -->
     <div class="container-fluid py-5 text-center" id="quiz">
         <h3>Wanna take a quiz?</h3>
         <div data-aidaform-widget="form-2019-12" data-url="https://samuelemeka2006.aidaform.com/expert-account-template-tv-show-quiz" data-width="100%" data-height="500px" data-do-resize></div>
