--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
     <!-- Calculator Start -->
 
     <div class="container-fluid py-5-text-center">
-        <h3>Find out how much it costs to get your own website.</h3>
+        <h3 class="text-center py-3">Find out how much it costs to get your own website.</h3>
 
         <div class="calculator">
             <div data-aidaform-widget="form-2019-12" data-url="https://samuelemeka2006.aidaform.com/expert-template-website-design-cost-calculator" data-width="100%" data-height="500px" data-do-resize></div><script>(function(){var r,d=document,gt=d.getElementById,cr=d.createElement,tg=d.getElementsByTagName,id="aidaform-embed";if(!gt.call(d,id)){r=cr.call(d,"script");r.id=id;r.src="https://embed.aidaform.com/embed.js";(d.head || tg.call(d,"head")[0]).appendChild(r);}})()</script>
