--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <!-- <a href="#blog" class="nav-item nav-link">Blog</a> -->
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.fiverr.com/share/r2rL17" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="https://www.fiverr.com/s2/2f60fa39b8" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
