--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta content="Samuel Emeka's Portfolio" name="description">
     <meta name="name" content="s5d8f76sd8f7s6d8f76s8d7f8s">
     <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7721767933257398" crossorigin="anonymous"></script> -->
-    <!-- <script type="text/javascript" src="https://cdn.diclotrans.com/sdk/v1/10891/ae24731cc98cce310d33179aeb546e5c996cea7b/lib.js"></script> -->
+    <script type="text/javascript" src="https://cdn.diclotrans.com/sdk/v1/10891/ae24731cc98cce310d33179aeb546e5c996cea7b/lib.js"></script>
     <!-- Favicon -->
     <link href="img/favicon.png" rel="icon">
 
@@ -467,7 +467,7 @@
 
 
     <!-- JavaScript Libraries -->
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="lib/typed/typed.min.js"></script>
     <script src="lib/easing/easing.min.js"></script>
