--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-5 pb-4 pb-lg-0">
-                    <img class="img-fluid rounded w-100" src="img/fbpost.jpg" alt="">
+                    <img class="img-fluid rounded w-100" src="img/IMG_20230402_111827.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">UI/UX Designer & Web Developer</h3>
